# End-to-End-Multi-Document-RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  test.py  tt
.github/workflows/: ci.yaml  task_defination.json
multi_doc_chat/config/: config.yaml
multi_doc_chat/exception/: customException.py
multi_doc_chat/logger/: __init__.py  customLogger.py
multi_doc_chat/src/: DataIngestion.py  retreival.py
multi_doc_chat/utils/: config_loaders.py  document_ops.py  fileio.py  model_loader.py
notebook/: evaluation.ipynb  rag.ipynb
static/: style.css
templates/: index.html
test/: conftest.py
test/integration/: test_chat_route.py  test_upload_route.py
test/unit/: test_data_ingestion.py  test_retreiver.py
